# mtsp-routing-core

./: README.md  README.ru.md  requirements.txt  setup.cfg
routing/: _exceptions.py  _limits.py  _spatial_objects.py  solution.py  spatial_objects.py
routing/algorithms/: a_star.py  genetic_algorithm.py  graham_scan.py  k_means.py
src/routing/: solution.py
src/routing/algorithms/: a_star.py  genetic_algorithm.py
tests/: test_solution.py  test_spatial_objects.py
tests/algorithms/: test_a_star.py  test_genetic_algorithm.py  test_graham_scan.py  test_k_means.py
