[metadata]
name = mtsp-routing-core
version = 1.0.1
url = https://github.com/bkarpov/mtsp-routing-core
description = MTSP solution
author = Boris Karpov
author_email = bkarpov96@ya.ru
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
zip_safe = True
packages = routing
python_requires = >=3.8
install_requires =
    ortools >= 9.2

[tool:pytest]
addopts = --showlocals --verbose --tb=short
