[metadata]
name = mtsp_routing
version = 1.0.4
url = https://github.com/bkarpov/mtsp-routing-core
description = Solve multiple traveling salesman problem (MTSP)
long_description = file: README.md
long_description_content_type = text/markdown
author = Boris Karpov
author_email = bkarpov96@ya.ru
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
zip_safe = True
packages = routing
python_requires = >=3.8
install_requires =
    ortools >= 9.2

[tool:pytest]
addopts = --showlocals --verbose --tb=short
