[metadata]
name = mtsp_routing
version = 1.0.9
url = https://github.com/bkarpov/mtsp-routing-core
description = Solve multiple traveling salesman problem (MTSP)
long_description = file: README.md
long_description_content_type = text/markdown
author = Boris Karpov
author_email = bkarpov96@ya.ru
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
zip_safe = True
packages = find_namespace:
include_package_data = True
package_dir =
    =src
python_requires = >=3.7
install_requires =
    ortools >= 9.2

[options.packages.find]
where = src

[tool:pytest]
addopts = --showlocals --verbose --tb=short
